src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Activity Creation</fullName>
        <description>Related to activity creation client management</description>
        <isActive>true</isActive>
        <values>
            <fullName>Administratively Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Successfully Closed</fullName>
        </values>
        <values>
            <fullName>Unable to Resolve</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Salesforce Support</fullName>
        <description>Salesforce Support requests, tickets, cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Action Required</fullName>
        </values>
        <values>
            <fullName>Administratively Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Successfully Closed</fullName>
        </values>
        <values>
            <fullName>Unable to Resolve</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Toolkit Application</fullName>
        <description>Case statuses used for Toolkit Application vetting.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Action Required</fullName>
        </values>
        <values>
            <fullName>Administratively Closed</fullName>
        </values>
        <values>
            <fullName>Denied</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Successfully Closed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Trade Support</fullName>
        <description>Trade Support</description>
        <isActive>true</isActive>
        <values>
            <fullName>Action Required</fullName>
        </values>
        <values>
            <fullName>Administratively Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Inactive</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Successfully Closed</fullName>
        </values>
        <values>
            <fullName>Unable to Resolve</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_Case_Closed_Date__c</fullName>
        <description>Field added for legacy Commercial Diplomacy Cases migrated from CTS that were not migrated with the Date/Time Closed field.</description>
        <inlineHelpText>Case Closed Date from Legacy System.</inlineHelpText>
        <label>Actual Case Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>This field will display the actual creation date for records from CTS/ITA Central/Salesforce. Use this field for FY 15&apos; reporting</inlineHelpText>
        <label>Actual Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Advocacy_Actions_to_Date_Summary__c</fullName>
        <inlineHelpText>Summary of actions taken and next steps.</inlineHelpText>
        <label>AC Actions to Date Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_Case_Description__c</fullName>
        <description>dummy field</description>
        <inlineHelpText>The non-sanitized name of the project.  (Advocacy will put a generic description for the Case in the common fields, or leave that field blank).</inlineHelpText>
        <label>AC Case Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_Competitors__c</fullName>
        <inlineHelpText>Domestic and Foreign firms competing against the client.</inlineHelpText>
        <label>AC Competitors</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_Expected_Project_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The expected value of the procurement.</inlineHelpText>
        <label>AC Expected Project Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advocacy_Expected_US_Export_Content__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The expected value of the U.S. export content in the procurement.</inlineHelpText>
        <label>AC Expected U.S. Export Content</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Advocacy_Foreign_Decision_Makers__c</fullName>
        <inlineHelpText>The entities and/or people involved in the selection process for the project competition.</inlineHelpText>
        <label>AC Foreign Decision Makers</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocacy_Official_USG_Advisory_Position__c</fullName>
        <inlineHelpText>The level of advocacy approved for the case.</inlineHelpText>
        <label>AC Official USG Advisory Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Exclusive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advocacy_Pro__c</fullName>
        <description>dummy field</description>
        <inlineHelpText>A non-sanitized short title of the global project the client is requesting USG advocacy on.</inlineHelpText>
        <label>AC Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advocacy_Project_Status__c</fullName>
        <label>AC Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Due Diligence In Progress</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attended_SelectUSA_Investment_Summit_201__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended SelectUSA Investment Summit 201</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Opportunity_Created_Improved__c</fullName>
        <description>This is a brief explanation of the business opportunity created/improved as a result of ITA efforts.</description>
        <inlineHelpText>Include a brief explanation of the business opportunity created/improved as a result of ITA efforts.</inlineHelpText>
        <label>Business Opportunity Created/Improved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CD_Agreement_Notes__c</fullName>
        <label>TANC Agreement Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Case_Origin_Notes__c</fullName>
        <label>TANC Case Origin Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Case_Origin__c</fullName>
        <label>TANC Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hotline or TANC Mail or Website</fullName>
                </value>
                <value>
                    <fullName>Marketing Campaign</fullName>
                </value>
                <value>
                    <fullName>Congressional Office Referral</fullName>
                </value>
                <value>
                    <fullName>Colleague or Past Client Referral</fullName>
                </value>
                <value>
                    <fullName>E&amp;C Front Office Travel</fullName>
                </value>
                <value>
                    <fullName>DEC Referral</fullName>
                </value>
                <value>
                    <fullName>GKC Referral</fullName>
                </value>
                <value>
                    <fullName>SIDO Referral</fullName>
                </value>
                <value>
                    <fullName>Social Media Referral</fullName>
                </value>
                <value>
                    <fullName>Trade Association Referral</fullName>
                </value>
                <value>
                    <fullName>USEAC/Post Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CD_Case_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TANC Case Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CD_Compliance_Case_Initiated_Date__c</fullName>
        <label>TANC Compliance Case Initiated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CD_Compliance_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>12/15/14 - changed label and name from &quot;Compliance Case&quot;

Select if this is a Compliance Case</description>
        <inlineHelpText>Select if this is a Compliance Case</inlineHelpText>
        <label>TANC Compliance Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CD_Describe_Other_Trade_Barrier_Area_s__c</fullName>
        <label>TANC Describe Other Trade Barrier Areas</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Explanation_of_Case_Value__c</fullName>
        <inlineHelpText>How the value was determined (e.g., “Trade Data” or “Client Input”)</inlineHelpText>
        <label>TANC Explanation of Case Value</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Initiation_Summary__c</fullName>
        <inlineHelpText>This is the brief description of the problem as well as why ITA is working on the issue (to cover ITA interest).</inlineHelpText>
        <label>TANC Initiation Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Interested_Parties__c</fullName>
        <label>TANC Interested Parties</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Relevant_Agreement__c</fullName>
        <inlineHelpText>Whether there is a trade agreement in force that covers the trade problem that is the central issue of the case.</inlineHelpText>
        <label>TANC Relevant Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reviewed/Decision Pending</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CD_Success_Definition__c</fullName>
        <inlineHelpText>The description of what ITA is aiming to do in the case.</inlineHelpText>
        <label>TANC Success Definition</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CD_Tanc_Tags__c</fullName>
        <label>TANC Tags</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TANC</fullName>
                </value>
                <value>
                    <fullName>Raised in WTO Committee 2011 or earlier</fullName>
                </value>
                <value>
                    <fullName>Raised in WTO Committee 2012</fullName>
                </value>
                <value>
                    <fullName>Raised in WTO Committee 2013</fullName>
                </value>
                <value>
                    <fullName>Raised in WTO Committee 2014</fullName>
                </value>
                <value>
                    <fullName>Raised in WTO Committee 2015</fullName>
                </value>
                <value>
                    <fullName>Raised in WTO Committee 2016</fullName>
                </value>
                <value>
                    <fullName>Raised in T-TIP Negotiations</fullName>
                </value>
                <value>
                    <fullName>Raised in TPP Negotiations</fullName>
                </value>
                <value>
                    <fullName>Formal Bilateral Dialogue</fullName>
                </value>
                <value>
                    <fullName>GM Total Economic Engagement (TEE)</fullName>
                </value>
                <value>
                    <fullName>Trade Agreement Accession</fullName>
                </value>
                <value>
                    <fullName>Referred for dispute settlement</fullName>
                </value>
                <value>
                    <fullName>NTE 2010</fullName>
                </value>
                <value>
                    <fullName>NTE 2011</fullName>
                </value>
                <value>
                    <fullName>NTE 2012</fullName>
                </value>
                <value>
                    <fullName>NTE 2013</fullName>
                </value>
                <value>
                    <fullName>NTE 2014</fullName>
                </value>
                <value>
                    <fullName>NTE 2015</fullName>
                </value>
                <value>
                    <fullName>NTE 2016</fullName>
                </value>
                <value>
                    <fullName>TBT Report 2010</fullName>
                </value>
                <value>
                    <fullName>TBT Report 2011</fullName>
                </value>
                <value>
                    <fullName>TBT Report 2012</fullName>
                </value>
                <value>
                    <fullName>TBT Report 2013</fullName>
                </value>
                <value>
                    <fullName>TBT Report 2014</fullName>
                </value>
                <value>
                    <fullName>TBT Report 2015</fullName>
                </value>
                <value>
                    <fullName>TBT Report 2016</fullName>
                </value>
                <value>
                    <fullName>SPS Report 2010</fullName>
                </value>
                <value>
                    <fullName>SPS Report 2011</fullName>
                </value>
                <value>
                    <fullName>SPS Report 2012</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CD_Trade_Barrier__c</fullName>
        <inlineHelpText>The general “issue” that is being addressed by the case.</inlineHelpText>
        <label>TANC Trade Barrier Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Border Based</fullName>
                </value>
                <value>
                    <fullName>Customs Procedures Class Valuation</fullName>
                </value>
                <value>
                    <fullName>Customs Fees or Formalities</fullName>
                </value>
                <value>
                    <fullName>Import Licensing</fullName>
                </value>
                <value>
                    <fullName>Rules of Origin Certificates of Origin</fullName>
                </value>
                <value>
                    <fullName>Preshipment Inspection</fullName>
                </value>
                <value>
                    <fullName>Trade Facilitation</fullName>
                </value>
                <value>
                    <fullName>Tariffs</fullName>
                </value>
                <value>
                    <fullName>Internal Regulatory</fullName>
                </value>
                <value>
                    <fullName>Technical Standards TBT</fullName>
                </value>
                <value>
                    <fullName>Plant Animal Standards SPS</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Regulatory Coherence</fullName>
                </value>
                <value>
                    <fullName>IPR</fullName>
                </value>
                <value>
                    <fullName>Corruption Bribery</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Government Influence</fullName>
                </value>
                <value>
                    <fullName>Government Procurement</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>State Owned Enterprises</fullName>
                </value>
                <value>
                    <fullName>Subsidies</fullName>
                </value>
                <value>
                    <fullName>AD CVD Measures</fullName>
                </value>
                <value>
                    <fullName>Safeguards</fullName>
                </value>
                <value>
                    <fullName>National Treatment</fullName>
                </value>
                <value>
                    <fullName>Quotas Import Measures</fullName>
                </value>
                <value>
                    <fullName>Export Measures</fullName>
                </value>
                <value>
                    <fullName>Antimonopoly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTS_ID__c</fullName>
        <description>Legacy CTS ID of Incident, Advocacy, or CDS</description>
        <label>CTS ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTS_Org_ID__c</fullName>
        <description>Legacy CTS Organization ID</description>
        <label>CTS Org ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related campaign</description>
        <inlineHelpText>This field will hole the related the campaign this case was created from</inlineHelpText>
        <label>Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_18_ID__c</fullName>
        <description>provides case safe 18 character ID for use in reporting</description>
        <formula>casesafeid(Id)</formula>
        <label>Case 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Close_Summary__c</fullName>
        <label>Case Close Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Contributor_Rollup__c</fullName>
        <label>Case Contributor Rollup</label>
        <summaryForeignKey>Case_Contributor__c.Case_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Full_Name__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName</formula>
        <label>Case Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Objective__c</fullName>
        <label>Client Objective</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Diplomacy_Triage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Diplomacy Triage</label>
        <referenceTo>Commercial_Diplomacy_Triage__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if this is a Compliance Case</inlineHelpText>
        <label>Compliance Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Opt_Out__c</fullName>
        <description>Whether the Contact related to the case has opted out of receiving emails</description>
        <formula>Contact.HasOptedOutOfEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Whether the Contact related to the case has opted out of receiving emails</inlineHelpText>
        <label>Contact Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Public Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>Contact.FirstName &amp;&apos; &apos;&amp;  Contact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_copy__c</fullName>
        <label>Contact Name copy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_is_Active__c</fullName>
        <description>Status Value for Related Contact.  Works in conjunction with Validation Rule to prevent deletes for Inactive Contacts.</description>
        <formula>Contact.Active__c</formula>
        <label>Contact is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_Number__c</fullName>
        <label>Control Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_AccountName_to_Text__c</fullName>
        <description>This field is used to copy the AccountName lookup to text which will be used for global search</description>
        <label>Copy AccountName to Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Contact_Email__c</fullName>
        <label>Copy Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Contact_Phone__c</fullName>
        <description>Holds the phone number of the Clients phone number (used for EXIM Export)</description>
        <label>Copy_Contact_Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country_in_Case_Rollup__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Country in Case Rollup</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <description>Count of days open between Today and Created Date.</description>
        <formula>IF( ISNULL(  ClosedDate ) ,
            TODAY()  -    DATEVALUE( Actual_Create_Date__c )   , 
            ClosedDate   -    Actual_Create_Date__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Value__c</fullName>
        <inlineHelpText>Estimate potential dollar value if we successfully meet the client’s objectives. For example, ensuring a $50,000 sale goes through; signing an agreement worth $300,000, a trade lead for $3,000 worth of goods, $40,000  in tuition etc. Leave blank if unsure</inlineHelpText>
        <label>Expected Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee-Based Services</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Fee-Based Services Used</fullName>
                    <default>true</default>
                    <label>No Fee-Based Services Used</label>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>Business Facilitation Service</fullName>
                </value>
                <value>
                    <fullName>Business Service Provider</fullName>
                </value>
                <value>
                    <fullName>BuyUSA.gov Business Service Provider</fullName>
                </value>
                <value>
                    <fullName>Certification Letter</fullName>
                </value>
                <value>
                    <fullName>Certified Trade Mission</fullName>
                </value>
                <value>
                    <fullName>Contact List</fullName>
                </value>
                <value>
                    <fullName>Customized Market Research</fullName>
                </value>
                <value>
                    <fullName>Featured US Exporters (FUSE)</fullName>
                </value>
                <value>
                    <fullName>Foreign Buyer Delegation</fullName>
                </value>
                <value>
                    <fullName>Gold Key Matching Service</fullName>
                </value>
                <value>
                    <fullName>HQ Use Only - Administration</fullName>
                </value>
                <value>
                    <fullName>Initial Market Check</fullName>
                </value>
                <value>
                    <fullName>International Company Profile</fullName>
                </value>
                <value>
                    <fullName>International Company Profile – Full</fullName>
                </value>
                <value>
                    <fullName>International Company Profile – Partial</fullName>
                </value>
                <value>
                    <fullName>International Partner Search</fullName>
                </value>
                <value>
                    <fullName>International Partner Search + Virtual Introductions</fullName>
                </value>
                <value>
                    <fullName>Facilitated Investment Mission</fullName>
                </value>
                <value>
                    <fullName>Platinum Key Service</fullName>
                </value>
                <value>
                    <fullName>Quicktake</fullName>
                </value>
                <value>
                    <fullName>Single Company Promotion</fullName>
                </value>
                <value>
                    <fullName>Tourism Research Programs</fullName>
                </value>
                <value>
                    <fullName>Single Location Promotion</fullName>
                </value>
                <value>
                    <fullName>Trade Event</fullName>
                </value>
                <value>
                    <fullName>Trade Mission</fullName>
                </value>
                <value>
                    <fullName>Trade Show Representation</fullName>
                </value>
                <value>
                    <fullName>Virtual Fair</fullName>
                </value>
                <value>
                    <fullName>Website Globalization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Calculation_2015__c</fullName>
        <label>Fiscal Year Calculation 2015</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>Text(YEAR(DATEVALUE(CreatedDate + 92 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foreign_Buyer_Delegate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field to capture if activity is associated with a Foreign Buyer Delegate at this time. FBD is not a permanent identifier, is per activity basis.</description>
        <label>Foreign Buyer Delegate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HIDDEN_PB_Access_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden field used for kicking off Process Builder flows.</description>
        <label>HIDDEN - PB Access Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HTS_Comments__c</fullName>
        <label>HTS Comments</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IP_Case_Origin_Other__c</fullName>
        <inlineHelpText>Investment Promo Case Origin - Other</inlineHelpText>
        <label>SUSA Case Origin - Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Case_Origin__c</fullName>
        <inlineHelpText>Investment Promotion Case Origin</inlineHelpText>
        <label>SUSA Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ref from Foreign Post</fullName>
                </value>
                <value>
                    <fullName>Ref from USEAC</fullName>
                </value>
                <value>
                    <fullName>Ref from GM</fullName>
                </value>
                <value>
                    <fullName>Ref from Other</fullName>
                </value>
                <value>
                    <fullName>SUSA.gov Portal</fullName>
                </value>
                <value>
                    <fullName>Business.gov Portal</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IP_Case_Reason__c</fullName>
        <description>Investment Promotion Case Reason</description>
        <inlineHelpText>Purpose of the Case.</inlineHelpText>
        <label>SUSA Case Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Information Assistance</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Counseling</fullName>
                </value>
                <value>
                    <fullName>Ombudsman</fullName>
                </value>
                <value>
                    <fullName>SelectUSA Investment Summit Attendee</fullName>
                </value>
                <value>
                    <fullName>SelectUSA Road Show Attendee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>